--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "core-js": "^3.45.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
